// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> <TableBodyCell.Virtualized /> should match snapshot 1`] = `
<div>
  <td
    class="css-3pla2f-VirtualizedTableBodyCell"
    id="1"
  />
</div>
`;

exports[`<Table /> <TableBodyRow.Virtualized /> should match snapshot 1`] = `
<div>
  <tr
    class="css-1xj7jxq-VirtualizedTableBodyRow"
    id="1"
  />
</div>
`;

exports[`<Table /> should match snapshot 1`] = `
<div>
  <div
    style="overflow: auto; position: relative; height: 800px;"
  >
    <table
      class="css-ots347-VirtualizedTableContainer"
    >
      <thead
        class="css-k8zgs7-VirtualizedTableHead"
      >
        <tr
          class="css-td0vjp-VirtualizedTableHeadRow"
          id="0"
        >
          <th
            class="css-1ffs8qw-VirtualizedTableHeadCell"
            id="table-interactions"
          >
            <div
              class="css-g89m8z-Box"
            >
              <div
                class="css-v65un1-InteractiveColumnHeader"
              >
                <div
                  class="css-17w1b6b-CheckboxWithRef"
                >
                  <input
                    class="css-1pckfla-CheckboxWithRef"
                    id="select-all-checkbox"
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </th>
          <th
            class="css-1ffs8qw-VirtualizedTableHeadCell"
            id="firstName"
          >
            <div
              class="css-g89m8z-Box"
            >
              First Name
            </div>
          </th>
          <th
            class="css-1ffs8qw-VirtualizedTableHeadCell"
            id="lastName"
          >
            <div
              class="css-g89m8z-Box"
            >
              Last Name
            </div>
          </th>
          <th
            class="css-1ffs8qw-VirtualizedTableHeadCell"
            id="age"
          >
            <div
              class="css-g89m8z-Box"
            >
              Age
            </div>
          </th>
          <th
            class="css-1ffs8qw-VirtualizedTableHeadCell"
            id="visits"
          >
            <div
              class="css-g89m8z-Box"
            >
              Visits
            </div>
          </th>
          <th
            class="css-1ffs8qw-VirtualizedTableHeadCell"
            id="status"
          >
            <div
              class="css-g89m8z-Box"
            >
              Status
            </div>
          </th>
          <th
            class="css-1ffs8qw-VirtualizedTableHeadCell"
            id="progress"
          >
            <div
              class="css-g89m8z-Box"
            >
              Progress
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="css-1t8nn7p-VirtualizedTableBody"
      />
    </table>
  </div>
</div>
`;
